# ItoSub

./: AGENTS.md  ItoSub.spec  README.md  live_mic.json  pyproject.toml
assets/config/: default.json
itosub/: contracts.py  live_mic.json
itosub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
itosub/app/: config.py  diagnostics.py  logging_setup.py  main.py  main_window_qt.py  runtime.py  services.py  settings_qt.py  state.py
itosub/asr/: base.py  faster_whisper_file.py  faster_whisper_pcm16.py  faster_whisper_stream.py  stream_base.py
itosub/audio/: mic.py  utterance_chunker.py  vad.py  vad_webrtc.py
itosub/demos/: demo_asr_file.py  demo_asr_translate_file.py  demo_live_mic_asr_translate.py  demo_live_mic_transcribe.py  demo_live_mic_translate.py  demo_live_mic_translate_vad.py  demo_live_overlay_translate.py  demo_mic_level.py  demo_mic_record_wav.py  demo_overlay_smoke.py  demo_replay_translate.py  demo_translate_file.py
itosub/live/: __init__.py  live_asr_translate.py  live_transcribe.py  pipeline.py
itosub/nlp/: postprocess_en.py  segmenter.py
itosub/nlp/translator/: argos.py  (+3 more)
itosub/ui/: bridge.py  overlay_qt.py
tests/: test_app_config.py  test_app_diagnostics.py  test_app_logging.py  test_app_main_args.py  test_app_runtime.py  test_app_services.py  test_app_state.py  test_asr_wrapper.py  test_demo_live_mic_transcribe_config.py  test_factory.py  test_live_asr_translate_handler.py  test_live_pipeline.py  test_live_utterance_transcriber.py  test_overlay_bridge.py  test_overlay_format.py  test_postprocess_en.py  test_translator_stub.py
