[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itosub"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["platformdirs>=4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["itosub*"]

[project.optional-dependencies]
mic = ["sounddevice>=0.4.6"]
